ensure overflow doesn't happen

--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ h1 {
     .textbox2 {
         border-radius: 20px;
         padding: 20px;
-		width: 110%
+		width: 100%
     }
 
     .overlay-text {
